# checkcheck

./: .dockerignore  .gitignore  .pdm-python  CARD_SHARING_PLAN.md  CARD_SHARING_PLAN_FRONTEND.md  CHANGELOG.md  Dockerfile  E2E_TESTING.md  E2E_TESTING_STATUS.md  ISSUES.md  README.md  README_DOCKER.md  STALE_VERSION_STAMP_HANDOFF.md  SYNC_PLAN.md  UI_POLISH.md  VERSION_2.0_PLAN.md  alembic.ini  build_docker.sh  build_frontend.sh  build_frontend_dev_env.sh  build_requirement_files.sh  build_server_dev_env.sh  config.example.yml  gen_config_docs.sh  gen_screenshots.sh  run_backend_tests_with_postgres.sh  run_backend_tests_with_sqlite.sh  run_dev_backend_server_with_oidc.sh  run_dev_backend_server_with_oidc_on_postgres.sh  run_dev_frontend.sh  run_e2e_tests.sh  run_e2e_tests_postgres.sh
CheckCheck/: frontend_setup_log.md  (+1 more)
CheckCheck/backend/: .dockerignore  .gitignore  .pdm-python  README.md  dev_notes.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt
CheckCheck/backend/checkcheckserver/: __init__.py  app.py  config.py  default_data.yaml  log.py  main.py  utils.py
CheckCheck/backend/checkcheckserver/api/: access.py  base.py  group_share_reconcile.py  paginator.py  routers_map.py  share_ops.py  share_password.py
CheckCheck/backend/checkcheckserver/api/auth/: security.py  utils.py
CheckCheck/backend/checkcheckserver/api/routes/: routes_auth.py  routes_changes.py  routes_checklist.py  routes_checklist_item.py  routes_checklist_item_pos.py  routes_checklist_item_state.py  routes_checklist_label.py  routes_checklist_position.py  routes_checklist_public.py  routes_checklist_share.py  routes_color_scheme.py  routes_healthcheck.py  routes_notification.py  routes_public_config.py  routes_sync_notification.py  routes_user.py  routes_user_management.py  routes_webclient.py
CheckCheck/backend/checkcheckserver/db/: _base_crud.py  _db_data_provisioner.py  _engine.py  _init_db.py  _session.py  checklist.py  checklist_collaborator.py  checklist_color_scheme.py  checklist_group_share.py  checklist_item.py  checklist_item_position.py  checklist_item_state.py  checklist_label.py  checklist_position.py  checklist_public_share.py  healthcheck.py  label.py  notification.py  sync_notification.py  sync_seq.py  user.py  user_auth.py  user_session.py
CheckCheck/backend/checkcheckserver/dev/: __init__.py  _seed_content.py  seed_dev_data.py
CheckCheck/backend/checkcheckserver/model/: _base_model.py  _hashing.py  _tables.py  auth_scheme_info.py  changes.py  checklist.py  checklist_collaborator.py  checklist_color_scheme.py  checklist_external_share.py  checklist_group_share.py  checklist_item.py  checklist_item_position.py  checklist_item_state.py  checklist_label.py  checklist_position.py  checklist_public_share.py  healthcheck.py  label.py  notification.py  sync_notifications.py  user.py  user_auth.py  user_info_oidc.py  user_session.py
CheckCheck/backend/dev_oidc_server/: oidc_provider_mock_server.py  testusers.yaml
CheckCheck/backend/e2e/: start_e2e_server.py
CheckCheck/backend/e2e/provisioning_data/: test_users.yaml
CheckCheck/backend/migrations/: env.py  script.py.mako
CheckCheck/backend/migrations/versions/: 0001_add_display_name_and_last_used_at_to_user_auth.py  0002_add_unique_constraint_to_sync_notification.py  0003_drop_sync_notification_unique_constraint.py  0004_sync_notification_autoincrement_pk.py  0005_add_sharing_columns.py  0006_sync_notification_explicit_targets.py  0007_public_share_and_token_targets.py  0008_public_share_password.py  0009_collaborator_status.py  0010_notifications.py  0010_squashed_baseline.py  0011_add_suggest_existing_items.py  0012_group_shares_living_membership.py
CheckCheck/backend/provisioning_data/demo_data/: demo_data.yaml  readme.md
CheckCheck/backend/screenshots/: start_screenshot_server.py
CheckCheck/backend/tests/: README.md  _single_test_file_runner.py  conftest.py  main.py  start_e2e_server.py  statics.py  tests_auth.py  tests_bulk_item_ops.py  tests_changes.py  tests_checklist.py  tests_checklist_counts.py  tests_checklist_items.py  tests_checklist_items_pos.py  tests_checklist_move.py  tests_checklist_pos.py  tests_checklist_shared_filter.py  tests_convergence.py  tests_cross_checklist_access.py  tests_health.py  tests_idempotent_writes.py  tests_item_state.py  tests_labels.py  tests_misc_endpoints.py  tests_much_data.py  tests_oidc_mapping.py  tests_oidc_refresh_race.py  tests_password_hashing.py  tests_server_seq_concurrency.py  tests_shared_position_orphan.py  tests_shared_position_scope.py  tests_sharing.py  tests_sharing_groups.py  tests_sharing_invites.py  tests_sharing_notifications.py  tests_sharing_phase89_review.py  tests_sharing_prereqs.py  tests_sharing_public.py  tests_sharing_sync.py  tests_sync_updated_at.py  tests_tombstones.py  (+2 more)
CheckCheck/backend/tests/provisioning_data/: single_study_demo_data.yaml
(+208 files in other folders)
