[project]
name = "checkcheckserver"
authors = [{ name = "Tim Bleimehl" }]
description = "Default template for PDM package"
readme = "README.md"
requires-python = "==3.11.*"
keywords = ["CheckCheck"]
license = { text = "MIT" }
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "uvicorn",
    "oauthlib",
    "fastapi",
    "starlette",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "Authlib",
    "httpx",
    "sqlmodel",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "itsdangerous",
    "pyyaml",
    "pydantic",
    "pydantic[email]",
    "pydantic_settings",
    "getversion>=1.0.2",
    "pip-tools",
    "python-multipart",
    "alembic",
    "email-validator",
]
dynamic = ["version"]
version = "0.1.0"

[tool.setuptools.packages.find]
include = ['checkcheckserver', 'provisioning_data']


[tool.pdm]
distribution = false

[project.scripts]
checkcheckserver = "checkcheckserver.main:start"

[dependency-groups]
dev = [
    "oidc-provider-mock>=0.2.5",
    "pyyaml>=6.0.2",
]
test = [
    "requests>=2.32.4",
]
