[project]
name = "checkcheckserver"
authors = [{ name = "Tim Bleimehl" }]
description = "Default template for PDM package"
readme = "README.md"
requires-python = "==3.13.*"
keywords = ["CheckCheck"]
license = { text = "MIT" }
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "uvicorn",
    "oauthlib",
    # Pin <0.119: 0.119.0 added a set-comprehension over field annotations in
    # get_definitions() that hashes Annotated metadata. SQLModel's
    # FieldInfoMetadata (a non-frozen, unhashable dataclass) lands in that
    # metadata, so openapi generation crashes with
    # "TypeError: unhashable type: 'FieldInfoMetadata'". Lift once SQLModel
    # ships a hashable FieldInfoMetadata.
    "fastapi<0.119",
    "starlette",
    "python-jose[cryptography]",
    # pwdlib replaces the unmaintained passlib (last release 2020, incompatible
    # with bcrypt 5). Passwords/passphrases are hashed with argon2; API tokens
    # use SHA-256 (see model/_hashing.py).
    "pwdlib[argon2]",
    "Authlib",
    "httpx",
    "sqlmodel",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "asyncpg",
    "itsdangerous",
    "pyyaml",
    "pydantic",
    "pydantic[email]",
    "pydantic_settings",
    "getversion>=1.0.2",
    "pip-tools",
    "python-multipart",
    "alembic",
    "email-validator",
]
dynamic = ["version"]
version = "0.1.0"

[tool.setuptools.packages.find]
include = ['checkcheckserver', 'provisioning_data']


[tool.pdm]
distribution = false

[project.scripts]
checkcheckserver = "checkcheckserver.main:start"

[dependency-groups]
dev = [
    "oidc-provider-mock>=0.2.5",
    "pyyaml>=6.0.2",
]
test = [
    "requests>=2.32.4",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests_*.py"]
python_functions = ["test_*", "tests_*"]
python_classes = []
addopts = "-v"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s  %(levelname)-8s  %(name)s — %(message)s"
log_cli_date_format = "%H:%M:%S"
